k8s-app/my-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-express-application-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: express-app
