k8s-app/my-second-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-second-application-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: second-express-app
