k8s-app/my-second-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-second-application-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /gaming
        pathType: Prefix
        backend:
          service:
            name: my-second-application-service
            port:
              number: 80
